@@ -1,5 +1,12 @@
 THIS CHANGELOG IS AN ATTEMPT TO DOCUMENT CHANGES TO THIS PROJECT.
 
+PL-node-v0.0.5
+ - FIX: type in organisms global header
+ - FIX: flat-structured pattern items rendered as if they had sub-menus #4
+ - ADD: Load all grunt tasks using matchdep
+ - THX: thanks to @colynb for the typo heads up
+ - THX: shoutout to @joemcgill for better dependency loading
+
 PL-node-v0.0.4
  - ADD: an explicit MIT license
 
